# spark-2603

./: AGENTS.md  Cargo.toml  README.md  deny.toml
benchmark/: README.md
crates/spark-buffer/: Cargo.toml
crates/spark-codec/: Cargo.toml
crates/spark-codec-http/: Cargo.toml
crates/spark-codec-sip/: Cargo.toml
crates/spark-codec-text/: Cargo.toml
crates/spark-core/: Cargo.toml
crates/spark-dist-iocp/: Cargo.toml
crates/spark-dist-iocp/src/: lib.rs  prelude.rs  tcp.rs
crates/spark-dist-iocp/src/server/: builder.rs  instance.rs  mod.rs
crates/spark-dist-iocp/tests/: dataplane_echo_smoke.rs  mgmt_dogfooding_smoke.rs
crates/spark-dist-mio/: Cargo.toml  README.md
crates/spark-dist-mio/examples/: mgmt_metrics_hook.rs  mgmt_timeout_group.rs  tcp_default.rs  webapp_builder.rs
crates/spark-dist-mio/src/: lib.rs  prelude.rs  profiles.rs  tcp.rs  udp_connected.rs
crates/spark-dist-mio/src/server/: builder.rs  instance.rs  mod.rs
crates/spark-dist-mio/tests/: mgmt_dogfooding_smoke.rs  smoke_mgmt_metrics.rs
crates/spark-ember/: Cargo.toml
crates/spark-ember/examples/: spark_switch.rs
crates/spark-ember/src/: lib.rs  run.rs  server.rs  util.rs
crates/spark-ember/src/http1/: mod.rs  server.rs  state.rs  transport_server.rs
crates/spark-engine-uring/: Cargo.toml
crates/spark-host/: Cargo.toml
crates/spark-host/src/: builder.rs  config.rs  lib.rs  mgmt_profile.rs  route_metrics.rs
crates/spark-host/src/router/: app.rs  endpoint.rs  group.rs  mod.rs  request.rs  response.rs  table.rs  types.rs
crates/spark-metrics-prometheus/: Cargo.toml
crates/spark-transport/: Cargo.toml
crates/spark-transport-contract/: Cargo.toml
crates/spark-transport-contract/src/: fake_io.rs  lib.rs  suite.rs
crates/spark-transport-contract/tests/: abortive_close_evidence.rs  accept_error_classification.rs  bench_baseline_manifest.rs  close_evidence.rs  connect_error_classification.rs  contract_suite.rs  driver_ordering.rs  framing_roundtrip.rs  framing_roundtrip_fuzz.rs  outbound_partial_vectored.rs  perf_baseline.rs  perf_baseline_manifest.rs  rx_lease_observability.rs  rx_lease_observability.rs.bak_hotfix2  state_ordering.rs  tcp_error_classification.rs  tcp_half_close.rs  udp_connected_error_classification.rs  udp_truncation.rs  windows_socket_error_codes.rs  write_pressure_progress.rs
crates/spark-transport-iocp/: Cargo.toml
crates/spark-transport-iocp/src/: lib.rs  native_completion.rs
crates/spark-transport-iocp/tests/: native_completion_smoke.rs  windows_backend_phase_gate.rs
crates/spark-transport-mio/: Cargo.toml
crates/spark-transport-mio/src/: acceptor.rs  evidence.rs  io.rs  lib.rs  pending.rs
crates/spark-transport-mio/src/dataplane/: mod.rs  tcp.rs  udp_connected.rs
crates/spark-transport-mio/src/engine/: mio_reactor.rs  mod.rs  queue_executor.rs
crates/spark-transport-mio/src/profiles/: mod.rs  tcp.rs  udp_connected.rs
crates/spark-transport-mio/src/tcp/: mod.rs  rx_token.rs  tcp_channel.rs
crates/spark-transport-mio/src/udp/: mem_datagram_channel.rs  mod.rs  udp_socket_channel.rs
crates/spark-transport-mio/tests/: bench_tcp_echo.rs  cross_platform_smoke.rs  dataplane_config_validation.rs  half_close_smoke.rs  perf_profile_smoke.rs  write_pressure_smoke.rs
crates/spark-transport/src/: app.rs  config.rs  error_codes.rs  evidence.rs  lease.rs  lib.rs  metrics.rs  policy.rs  slab.rs
crates/spark-transport/src/async_bridge/: channel.rs  channel_driver.rs  channel_state.rs  dyn_channel.rs  inbound_state.rs  mod.rs  outbound_buffer.rs  outbound_frame.rs  task.rs  waker.rs
crates/spark-transport/src/async_bridge/framers/: delimiter.rs  length_field.rs  line.rs  mod.rs  segment.rs  varint32.rs
crates/spark-transport/src/async_bridge/pipeline/: builder.rs  channel_pipeline.rs  context.rs  event.rs  frame_decoder.rs  frame_encoder.rs  handler.rs  head.rs  http1_inbound.rs  mod.rs  profile.rs  service_handler.rs  tail.rs
crates/spark-transport/src/executor/: mod.rs
crates/spark-transport/src/io/: accept.rs  caps.rs  connect.rs  error.rs  io_ops.rs  mod.rs  msg_boundary.rs  read_data.rs  read_outcome.rs  udp.rs  util.rs
crates/spark-transport/src/reactor/: completion.rs  event_buf.rs  interest.rs  kernel_event.rs  mod.rs  reactor_trait.rs
crates/spark-uci/: Cargo.toml
docs/: BACKEND_CONTRACT_MAP.md  BIGSTEP29_PHASED_MINIMAL.md  BIGSTEP29_PREFLIGHT_RX_ZERO_COPY_CLOSURE.md  CLOSE_SEMANTICS.md  CODE_STYLE.md  DECISION_LOG.md  DRIVER_SCHEDULING_KERNEL.md  EXTENSION_SURFACE.md  GAP_STATUS.md  JOINT_EXPERT_GROUP.md  KNOWN_ISSUES.md  MGMT_PROFILE_V1.md  NEW_SESSION_START_HERE.md  NORTH_STAR.md  OBSERVABILITY_CONTRACT.md  P0_GATES.md  PHASE1_CLOSEOUT.md  STATUS_BASELINE_202603.md  UNSAFE_REGISTRY.md  WORKSTREAM_ALLOC_CONTROL.md  WORKSTREAM_ASPNET_CORE_EXPERIENCE.md  WORKSTREAM_RX_ZERO_COPY.md  dotnetty-experience-notes.md  rust_for_oop_devs.md
docs/adr/: 000-driver-abstraction-pattern.md  001-north-star-acceptance.md  002-portability-tiers-embedded-wasm.md  003-no-intermediate-state.md  004-contract-suites-p0-p1.md  005-close-semantics-evidence-and-error-mapping.md  006-dogfooding-gate-transport-mgmt-smoke.md  007-mgmt-profile-v1.md  008-metrics-naming-contract.md  009-outbound-vectored-framing.md  010-multi-backend-contract-map.md  011-ember-backend-injection.md  012-completion-prototype-runnable-gate.md  013-driver-scheduling-kernel-before-hot-path-optimization.md
perf/: README.md  driver_kernel_step6_baseline.md  rx_borrowed_decode_phaseb_baseline.md  rx_borrowed_decode_phased_fallback_baseline.md
perf/baselines/: bench_tcp_echo_default.toml  bench_tcp_echo_unix.toml  (+7 more)
scripts/: baseline_guard.sh  bench_gate.ps1  bench_gate.sh  bench_tcp_echo.ps1  bench_tcp_echo.sh  build_all.sh  check_deps.sh  clippy.sh  deny.ps1  deny.sh  fix.ps1  fix.sh  fmt.sh  nostd_gate.ps1  nostd_gate.sh  panic_scan.sh  perf_baseline.ps1  perf_baseline.sh  perf_gate.ps1  perf_gate.sh  perf_gate_core.py  perf_report.sh  unblock.ps1  unsafe_audit.ps1  unsafe_audit.sh  unsafe_scan.sh  verify.ps1  verify.sh  verify_nightly.ps1  verify_nightly.sh  verify_wsl.sh
(+71 files in other folders)
